<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/portal_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/portal_url"
        android:inputType="text|textUri" />
    
    <EditText
        android:id="@+id/udp_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/udp_proxy"
        android:inputType="text|textUri" />

    <ToggleButton
        android:id="@+id/use_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/udp_proxy_enable"
        android:textOff="@string/udp_proxy_enable_off"
        android:textOn="@string/udp_proxy_enable_on"/>

</LinearLayout>